2007-05-23  Matthew Barnes  <mbarnes@redhat.com>
	* src/gva-common.h:
	Put all GConf key definitions here.

	* src/gva-main.c:
	* src/gva-tree-view.c:
	* src/gva-ui.c:
	* data/gnome-video-arcade.glade:
	* data/gnome-video-arcade.ui:
	Use a single model/filter/view stack and use different filtering
	criteria for each application view (Available / Favorites / Results).

	* src/gva-tree-view.c:
	Make columns reorderable.
	Distinguish between getting/setting the selected or last selected
	game or view.  "Last selected" refers to what's stored in GConf.

	* src/gva-ui.c (action_about_cb):
	Load the logo ourselves so we can dictate the size.

--- a/data/gnome-video-arcade.ui
+++ b/data/gnome-video-arcade.ui
@@ -19,21 +19,7 @@
       <menuitem action="about"/>
     </menu>
   </menubar>
-  <!-- A menu can only be attached to one widget, so we
-       need a separate popup menu for each tree view. -->
-  <popup name="game-popup-0">
-    <menuitem action="start"/>
-    <menuitem action="record"/>
-    <separator/>
-    <menuitem action="properties"/>
-  </popup>
-  <popup name="game-popup-1">
-    <menuitem action="start"/>
-    <menuitem action="record"/>
-    <separator/>
-    <menuitem action="properties"/>
-  </popup>
-  <popup name="game-popup-2">
+  <popup name="game-popup">
     <menuitem action="start"/>
     <menuitem action="record"/>
     <separator/>
