2007-05-23  Matthew Barnes  <mbarnes@redhat.com>
	* data/gnome-video-arcade.glade (play-back-scrolled-window):
	Set both horizontal and vertical scrollbar policies to automatic.

	* src/gva-play-back.c (gva_play_back_init):
	Put the text renderer in PANGO_ELLIPSIZE_END mode.

--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -189,6 +189,8 @@
           <widget class="GtkScrolledWindow" id="play-back-scrolled-window">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
             <property name="shadow_type">GTK_SHADOW_IN</property>
             <child>
               <widget class="GtkTreeView" id="play-back-tree-view">
