2007-05-25  Matthew Barnes  <mbarnes@redhat.com>
	* data/gnome-video-arcade.ui:
	Add menu items for adding or removing from favorites list.

	* src/gva-tree-view.c (tree_view_selected_changed_cb):
	Update visibility of "favorite" actions.

	* src/gva-tree-view.c (tree_view_favorite_clicked_cb):
	Activate "insert-favorite" or "remove-favorite" action.

	* src/gva-ui.c:
	* src/gva-ui.h:
	Add "insert-favorite" and "remove-favorite" actions.
	Rename gva_ui_get_glade_widget() to gva_ui_get_widget().

--- a/data/gnome-video-arcade.ui
+++ b/data/gnome-video-arcade.ui
@@ -5,6 +5,9 @@
       <menuitem action="record"/>
       <menuitem action="show-play-back"/>
       <separator/>
+      <menuitem action="insert-favorite"/>
+      <menuitem action="remove-favorite"/>
+      <separator/>
       <menuitem action="quit"/>
     </menu>
     <menu action="view-menu">
