--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -362,7 +362,7 @@
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                             <property name="xalign">0</property>
                             <property name="yalign">0</property>
-                            <property name="label" translatable="yes">&lt;small&gt;&lt;i&gt;NOTE: Setting this will not take effect until the second time the game is started.&lt;/i&gt;&lt;/small&gt;</property>
+                            <property name="label" translatable="yes">&lt;small&gt;&lt;i&gt;NOTE: Setting this will not take effect until the second time the game is started.  It does not apply to recording or playing back games.&lt;/i&gt;&lt;/small&gt;</property>
                             <property name="use_markup">True</property>
                             <property name="wrap">True</property>
                           </widget>
