--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -42,6 +42,7 @@
                     <property name="receives_default">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="tooltip" translatable="yes">Show all available games</property>
+                    <property name="response_id">0</property>
                   </widget>
                 </child>
                 <child>
@@ -51,6 +52,7 @@
                     <property name="receives_default">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="tooltip" translatable="yes">Only show my favorite games</property>
+                    <property name="response_id">0</property>
                   </widget>
                   <packing>
                     <property name="position">1</property>
@@ -63,6 +65,7 @@
                     <property name="receives_default">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="tooltip" translatable="yes">Show my search results</property>
+                    <property name="response_id">0</property>
                   </widget>
                   <packing>
                     <property name="position">2</property>
@@ -84,6 +87,7 @@
                 <child>
                   <widget class="GtkTreeView" id="main-tree-view">
                     <property name="visible">True</property>
+                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="headers_clickable">True</property>
@@ -109,6 +113,7 @@
                     <property name="tooltip" translatable="yes">Show information about the selected game</property>
                     <property name="label">gtk-properties</property>
                     <property name="use_stock">True</property>
+                    <property name="response_id">0</property>
                   </widget>
                 </child>
                 <child>
@@ -120,6 +125,7 @@
                     <property name="can_default">True</property>
                     <property name="has_default">True</property>
                     <property name="tooltip" translatable="yes">Start the selected game</property>
+                    <property name="response_id">0</property>
                     <child>
                       <widget class="GtkAlignment" id="main-start-game-button-alignment">
                         <property name="visible">True</property>
@@ -215,6 +221,7 @@
                 <property name="tooltip" translatable="yes">Close this window</property>
                 <property name="label">gtk-close</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
               </widget>
             </child>
             <child>
@@ -225,6 +232,7 @@
                 <property name="tooltip" translatable="yes">Delete the selected game recordings</property>
                 <property name="label">gtk-delete</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
               </widget>
               <packing>
                 <property name="position">1</property>
@@ -237,6 +245,7 @@
                 <property name="has_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="tooltip" translatable="yes">Play back the selected game recording</property>
+                <property name="response_id">0</property>
                 <child>
                   <widget class="GtkAlignment" id="play-back-button-alignment">
                     <property name="visible">True</property>
@@ -332,6 +341,7 @@
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">(full-screen) GtkUIManager supplies the label</property>
                         <property name="use_underline">True</property>
+                        <property name="response_id">0</property>
                         <property name="draw_indicator">True</property>
                       </widget>
                       <packing>
@@ -345,6 +355,7 @@
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">(auto-save) GtkUIManager supplies the label</property>
                         <property name="use_underline">True</property>
+                        <property name="response_id">0</property>
                         <property name="draw_indicator">True</property>
                       </widget>
                       <packing>
@@ -411,6 +422,7 @@
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
               </widget>
             </child>
           </widget>
