2007-06-21  Matthew Barnes  <mbarnes@redhat.com>
	* NEWS: Update for 0.2.0

	* data/gnome-video-arcade.glade:
	* src/gva-ui.c:
	Revert previous change; not all icon themes represent
	"gnome-joystick" as a joystick.  Too bad.

--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -138,7 +138,7 @@
                             <child>
                               <widget class="GtkImage" id="main-start-game-button-image">
                                 <property name="visible">True</property>
-                                <property name="icon_name">gnome-joystick</property>
+                                <property name="stock">gtk-execute</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
