2007-07-11  Matthew Barnes  <mbarnes@redhat.com>
	* data/gnome-video-arcade.glade:
	* data/gnome-video-arcade.ui:
	* src/gva-ui.c:
	Add hooks for a search window.

--- a/data/gnome-video-arcade.ui
+++ b/data/gnome-video-arcade.ui
@@ -11,6 +11,7 @@
       <menuitem action="quit"/>
     </menu>
     <menu action="edit-menu">
+      <menuitem action="search"/>
       <menuitem action="preferences"/>
     </menu>
     <menu action="view-menu">
