--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -124,6 +124,56 @@
                 <property name="spacing">12</property>
                 <property name="layout_style">GTK_BUTTONBOX_END</property>
                 <child>
+                  <widget class="GtkButton" id="main-search-button">
+                    <property name="visible">True</property>
+                    <property name="sensitive">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
+                    <property name="can_default">True</property>
+                    <property name="has_default">True</property>
+                    <property name="tooltip" translatable="yes">Show a custom list of games</property>
+                    <property name="response_id">0</property>
+                    <child>
+                      <widget class="GtkAlignment" id="main-search-button-alignment">
+                        <property name="visible">True</property>
+                        <property name="xscale">0</property>
+                        <property name="yscale">0</property>
+                        <child>
+                          <widget class="GtkHBox" id="main-ssearch-button-hbox">
+                            <property name="visible">True</property>
+                            <property name="spacing">2</property>
+                            <child>
+                              <widget class="GtkImage" id="main-search-button-image">
+                                <property name="visible">True</property>
+                                <property name="stock">gtk-find</property>
+                              </widget>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkLabel" id="main-search-button-label">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">S_earch...</property>
+                                <property name="use_underline">True</property>
+                              </widget>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
                   <widget class="GtkButton" id="main-properties-button">
                     <property name="visible">True</property>
                     <property name="sensitive">False</property>
@@ -133,6 +183,9 @@
                     <property name="use_stock">True</property>
                     <property name="response_id">0</property>
                   </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
                 <child>
                   <widget class="GtkButton" id="main-start-game-button">
@@ -181,7 +234,7 @@
                     </child>
                   </widget>
                   <packing>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </widget>
